--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "ts-node server.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
@@ -15,7 +13,6 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
     "swagger-ui-express": "^5.0.1",
@@ -25,7 +22,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.1",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/yamljs": "^0.2.34",
